Change: Fix deprecation warnings and set min_ansible_version to 2.5

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-sizeup_pkg: SizeUp
-sizeup_domain: "com.irradiatedsoftware.{{ sizeup_pkg }}"
 sizeup_defaults: {}
+sizeup_domain: "com.irradiatedsoftware.{{ sizeup_package }}"
+sizeup_package: SizeUp
 ...
