--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
 ---
 dependencies: []
 galaxy_info:
+  role_name: sizeup
   author: tkimball83
   description: macOS - The Missing Window Manager
   license: GPLv3
