[Change] Add support for python3, convert from dicts to lists

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-sizeup_defaults: {}
+sizeup_defaults: []
 sizeup_domain: "com.irradiatedsoftware.{{ sizeup_package }}"
 sizeup_package: SizeUp
 ...
