--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,21 +4,23 @@
   homebrew_cask:
     name: "{{ sizeup_package|lower }}"
     state: present
-  register: sizeup_homebrew_cask
+  when: sizeup_package|length > 0
 
 - name: Attempting to apply {{ sizeup_package }} configurations
   tags: sizeup
   osx_defaults:
     domain: "{{ sizeup_domain }}"
-    key: "{{ item.key|regex_replace('_', ' ') }}"
-    state: "{{ item.value.state|default('present') }}"
-    type: "{{ item.value.type }}"
-    value: "{{ item.value.value }}"
-  with_dict: "{{ sizeup_defaults }}"
+    key: "{{ item.name }}"
+    state: "{{ item.state|default('present') }}"
+    type: "{{ item.type }}"
+    value: "{{ item.value }}"
+  loop: "{{ sizeup_defaults }}"
+  loop_control:
+    label: "{{ item.name }}"
   when:
-    - item.key is defined
-    - item.value.type is defined
-    - item.value.value is defined
+    - item.name is defined
+    - item.type is defined
+    - item.value is defined
     - sizeup_defaults|length > 0
-    - sizeup_homebrew_cask is success
+    - sizeup_domain is defined
 ...
